added github OAuth
