# routes/index.js
@@ -4,10 +4,12 @@ const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('../swagger-output.json');
 const studentsRoute = require("./studentsRoute")
 const classesRoute = require("./classesRoute");
+const passport = require('passport');
 
-//route to hello world
+
 router.get("/", (req, res) => {
-    res.send("Hello World!");
+    console.log(req.session.user);
+  res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.displayName}` : "Logged out")
 });
 
 //route to students
@@ -15,6 +17,19 @@ router.use("/students", studentsRoute);
 
 //route to classes
 router.use("/classes", classesRoute);
+
+//route to login
+router.get("/login", passport.authenticate("github"), (req, res) => {})
+
+//route to logout
+router.get("/logout", (req, res, next) => {
+    req.logout((err) => {
+        if (err) {
+            return next(err);
+        }
+        res.redirect("/");
+    })
+})
 
 //route to api documentation
 router.use('/api-docs', swaggerUi.serve);
