# server.js
@@ -3,15 +3,54 @@ const app = express();
 const routes = require("./routes/index");
 const mongodb = require("./data/database");
 const bodyParser = require("body-parser");
+const passport = require("passport");
+const session = require("express-session");
+const GitHubStrategy = require("passport-github2").Strategy;
 
 const port = process.env.PORT || 3000;
 
 app.use(bodyParser.json());
 app.use(bodyParser.urlencoded({ extended: true }));
+app.use(session({
+  secret: "school-kingdom",
+  resave: false,
+  saveUninitialized: true,
+}))
+app.use(passport.initialize());
+app.use(passport.session());
 
 //route to all routes
 app.use("/", routes)
 
+
+//passport configuration for github OAuth
+passport.use(new GitHubStrategy({
+    clientID: process.env.GITHUB_CLIENT_ID,
+    clientSecret: process.env.GITHUB_CLIENT_SECRET,
+    callbackURL: process.env.CALLBACK_URL
+  },
+  function(accessToken, refreshToken, profile, done) {
+    // Here you can save the user profile to your database if needed
+    return done(null, profile);
+  }
+));
+
+// Serialize user to save in session
+passport.serializeUser((user, done) => {
+  done(null, user);
+});
+// Deserialize user from session
+passport.deserializeUser((user, done) => {
+  done(null, user);
+});
+
+app.get("/auth/github/callback", passport.authenticate("github", {
+  failureRedirect: "/api-docs", session: false}),
+  (req, res) => {
+    req.session.user = req.user;
+    res.redirect("/");
+  }
+);
 
 //connect to database and start server if successful
 mongodb.connectToDatabase((err) => {
